# fx-collection

./: CMakeLists.txt  README.md
include/ha/fx_collection/: trance_gate.h  types.h
source/: trance_gate.cpp
source/detail/: shuffle_note.cpp  shuffle_note.h
test/: array_alignment_test.cpp  trance_gate_test.cpp
